--- a/src/client/components/homepage/happening-now.scss
+++ b/src/client/components/homepage/happening-now.scss
@@ -42,7 +42,7 @@
 
 .happeningNowTitleMobile{
     font-size: 7.47vw;
-    line-height: 8vw;
+    // line-height: 8vw;
     font-weight: bold;
     padding-bottom: 2vw;
     padding-left: 12.53vw;
